--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-table": "^7.8.0",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "swr": "^2.2.5"
   },
   "devDependencies": {
